--- a/iidaPro-2015/CalendarTableViewCell.xib
+++ b/iidaPro-2015/CalendarTableViewCell.xib
@@ -39,10 +39,20 @@
                             <constraint firstAttribute="width" constant="40" id="Ez2-J7-o6a"/>
                         </constraints>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D3f-rS-i7F">
+                        <rect key="frame" x="135" y="7" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="WT9-y6-obp"/>
+                            <constraint firstAttribute="height" constant="40" id="uYm-eA-Vek"/>
+                        </constraints>
+                        <state key="normal" title="Button" image="Image-3"/>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="ufb-Wd-Tca" secondAttribute="trailing" constant="15" id="7Ea-e2-wMu"/>
                     <constraint firstItem="ufb-Wd-Tca" firstAttribute="leading" secondItem="vOp-x9-u3y" secondAttribute="trailing" constant="15" id="D3g-ov-ySJ"/>
+                    <constraint firstItem="D3f-rS-i7F" firstAttribute="leading" secondItem="R3G-Rz-ocS" secondAttribute="trailing" constant="30" id="E50-ui-hzp"/>
+                    <constraint firstItem="D3f-rS-i7F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="135" id="Lms-up-U81"/>
                     <constraint firstItem="LmW-wg-I2k" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="POF-6E-8hY"/>
                     <constraint firstItem="LmW-wg-I2k" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="eDs-Au-TFP"/>
                     <constraint firstItem="ufb-Wd-Tca" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="eJ6-HY-xDa"/>
@@ -50,16 +60,19 @@
                     <constraint firstItem="vOp-x9-u3y" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="g7E-a4-gwv"/>
                     <constraint firstItem="R3G-Rz-ocS" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="oh7-7W-HCC"/>
                     <constraint firstItem="R3G-Rz-ocS" firstAttribute="leading" secondItem="LmW-wg-I2k" secondAttribute="trailing" constant="15" id="ryn-uT-7SC"/>
+                    <constraint firstItem="D3f-rS-i7F" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="sO6-YY-dni"/>
                     <constraint firstItem="R3G-Rz-ocS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="140" id="uqQ-bM-z8c"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
                         <exclude reference="ryn-uT-7SC"/>
                         <exclude reference="uqQ-bM-z8c"/>
+                        <exclude reference="E50-ui-hzp"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
             <connections>
+                <outlet property="alarmButton" destination="D3f-rS-i7F" id="S7h-qH-teg"/>
                 <outlet property="dayLabel" destination="R3G-Rz-ocS" id="5XX-hZ-i05"/>
                 <outlet property="icon2ImageView" destination="vOp-x9-u3y" id="twr-KM-ZcR"/>
                 <outlet property="iconImageView" destination="ufb-Wd-Tca" id="617-Vy-sKg"/>
@@ -68,4 +81,7 @@
             <point key="canvasLocation" x="455" y="315.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Image-3" width="59" height="59"/>
+    </resources>
 </document>
