--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -4,6 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -21,6 +22,88 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O3k-Ig-RwW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="556" y="224"/>
+        </scene>
+        <!--Home View Controller-->
+        <scene sceneID="Ixf-Ad-4k8">
+            <objects>
+                <viewController storyboardIdentifier="Home" id="qGn-Ev-s0d" customClass="HomeViewController" customModule="iidaPro_2015" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CvN-Ha-oxi"/>
+                        <viewControllerLayoutGuide type="bottom" id="nIr-Nb-dSh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gML-25-hBx">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nWJ-pS-qvR">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="429"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="F95-r2-yiq">
+                                <rect key="frame" x="0.0" y="491" width="600" height="109"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xV3-ud-GvN">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="ueH-zz-IcK" customClass="MenuCollectionViewCell" customModule="iidaPro_2015" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="5" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3kM-YF-cIf">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="3kM-YF-cIf" firstAttribute="leading" secondItem="ueH-zz-IcK" secondAttribute="leading" id="Be2-J6-tU8"/>
+                                            <constraint firstAttribute="bottom" secondItem="3kM-YF-cIf" secondAttribute="bottom" id="jad-py-vvB"/>
+                                            <constraint firstItem="3kM-YF-cIf" firstAttribute="top" secondItem="ueH-zz-IcK" secondAttribute="top" id="qhg-K3-9zD"/>
+                                            <constraint firstAttribute="trailing" secondItem="3kM-YF-cIf" secondAttribute="trailing" id="uds-oA-334"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="menuImageView" destination="3kM-YF-cIf" id="CCh-nB-W6g"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="qGn-Ev-s0d" id="sB5-oN-wYk"/>
+                                    <outlet property="delegate" destination="qGn-Ev-s0d" id="7n4-sT-VFX"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="F95-r2-yiq" secondAttribute="trailing" id="7Ze-sZ-aeA"/>
+                            <constraint firstAttribute="bottom" secondItem="F95-r2-yiq" secondAttribute="bottom" id="90d-Fa-apx"/>
+                            <constraint firstAttribute="trailing" secondItem="nWJ-pS-qvR" secondAttribute="trailing" id="AX0-MK-oRu"/>
+                            <constraint firstItem="nWJ-pS-qvR" firstAttribute="height" secondItem="gML-25-hBx" secondAttribute="height" multiplier="5:7" id="FaE-F1-CbZ"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="nWJ-pS-qvR" secondAttribute="bottom" multiplier="7:5" id="JdA-Jx-s35"/>
+                            <constraint firstItem="F95-r2-yiq" firstAttribute="leading" secondItem="gML-25-hBx" secondAttribute="leading" id="akG-C3-XCi"/>
+                            <constraint firstItem="nWJ-pS-qvR" firstAttribute="leading" secondItem="gML-25-hBx" secondAttribute="leading" id="gy3-HW-DXp"/>
+                            <constraint firstItem="nWJ-pS-qvR" firstAttribute="top" secondItem="gML-25-hBx" secondAttribute="top" id="kgI-59-SbO"/>
+                            <constraint firstItem="F95-r2-yiq" firstAttribute="height" secondItem="gML-25-hBx" secondAttribute="height" multiplier="2:11" id="q80-Vq-3CB"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="JdA-Jx-s35"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="colorView" destination="nWJ-pS-qvR" id="I1H-IO-B5j"/>
+                        <outlet property="menuCollectionView" destination="F95-r2-yiq" id="GR5-fg-4Oh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DIq-mm-bR6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1228" y="-439"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
