--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -39,8 +39,13 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="429"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="81X-O4-n3N">
+                                <rect key="frame" x="0.0" y="358" width="600" height="134"/>
+                                <color key="backgroundColor" red="0.96862745100000003" green="0.59607843140000005" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="F95-r2-yiq">
                                 <rect key="frame" x="0.0" y="491" width="600" height="109"/>
+                                <color key="backgroundColor" red="0.0" green="0.11684455389999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xV3-ud-GvN">
                                     <size key="itemSize" width="100" height="100"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -87,14 +92,19 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottomMargin" secondItem="OmS-Lf-IJn" secondAttribute="bottom" id="000-FM-Ro7"/>
+                            <constraint firstItem="81X-O4-n3N" firstAttribute="leading" secondItem="gML-25-hBx" secondAttribute="leading" id="69Z-k3-v16"/>
                             <constraint firstAttribute="trailing" secondItem="F95-r2-yiq" secondAttribute="trailing" id="7Ze-sZ-aeA"/>
                             <constraint firstAttribute="bottom" secondItem="F95-r2-yiq" secondAttribute="bottom" id="90d-Fa-apx"/>
                             <constraint firstAttribute="trailing" secondItem="nWJ-pS-qvR" secondAttribute="trailing" id="AX0-MK-oRu"/>
+                            <constraint firstItem="81X-O4-n3N" firstAttribute="height" secondItem="gML-25-hBx" secondAttribute="height" multiplier="1:4.5" id="Ev2-DB-Qcg"/>
                             <constraint firstItem="nWJ-pS-qvR" firstAttribute="height" secondItem="gML-25-hBx" secondAttribute="height" multiplier="5:7" id="FaE-F1-CbZ"/>
                             <constraint firstItem="OmS-Lf-IJn" firstAttribute="width" secondItem="gML-25-hBx" secondAttribute="width" multiplier="7:11" id="GCf-d3-kRb"/>
                             <constraint firstItem="OmS-Lf-IJn" firstAttribute="centerY" secondItem="gML-25-hBx" secondAttribute="centerY" multiplier="0.7" id="HwH-S3-fAd"/>
+                            <constraint firstAttribute="trailing" secondItem="81X-O4-n3N" secondAttribute="trailing" id="Iy3-bj-CX2"/>
                             <constraint firstAttribute="bottomMargin" secondItem="nWJ-pS-qvR" secondAttribute="bottom" multiplier="7:5" id="JdA-Jx-s35"/>
                             <constraint firstItem="OmS-Lf-IJn" firstAttribute="top" secondItem="gML-25-hBx" secondAttribute="topMargin" id="M9I-zQ-j4z"/>
+                            <constraint firstItem="81X-O4-n3N" firstAttribute="centerX" secondItem="gML-25-hBx" secondAttribute="centerX" id="ONP-DX-th2"/>
+                            <constraint firstItem="81X-O4-n3N" firstAttribute="centerY" secondItem="gML-25-hBx" secondAttribute="centerY" multiplier="1.415" id="TGD-GT-BAW"/>
                             <constraint firstItem="OmS-Lf-IJn" firstAttribute="height" secondItem="gML-25-hBx" secondAttribute="height" id="Yr6-30-U8G"/>
                             <constraint firstItem="F95-r2-yiq" firstAttribute="leading" secondItem="gML-25-hBx" secondAttribute="leading" id="akG-C3-XCi"/>
                             <constraint firstItem="OmS-Lf-IJn" firstAttribute="leading" secondItem="gML-25-hBx" secondAttribute="leading" id="g9u-K0-Aud"/>
@@ -119,6 +129,7 @@
                         <outlet property="colorView" destination="nWJ-pS-qvR" id="I1H-IO-B5j"/>
                         <outlet property="menuCollectionView" destination="F95-r2-yiq" id="GR5-fg-4Oh"/>
                         <outlet property="trashImageView" destination="OmS-Lf-IJn" id="TwA-qy-Gpr"/>
+                        <outlet property="weatherImageView" destination="81X-O4-n3N" id="jYP-sh-xWc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DIq-mm-bR6" userLabel="First Responder" sceneMemberID="firstResponder"/>
